Move blockly toolbox CSS into semantic.css to be shared by the monaco editor

--- a/theme/style.less
+++ b/theme/style.less
@@ -1,6 +1,7 @@
 /* Import all components */
-@import 'semantic';
+@import 'pxtsemantic';
 @import 'pxt';
+@import 'blockly-toolbox';
 @import 'themes/default/globals/site.variables';
 @import 'themes/pxt/globals/site.variables';
 @import 'site/globals/site.variables';
@@ -9,7 +10,7 @@
 @import (reference) "semantic.less";
 
 /*******************************
-    Add your custom CSS here
+    Custom editor CSS
 *******************************/
 
 .ui.item.logo .name {
