Added PeerJS code, updated netsimple to use it.
Signed-off-by: William Temple <William.Temple@colorado.edu>

--- a/sim/public/sim.css
+++ b/sim/public/sim.css
@@ -1,9 +1,7 @@
-svg {
-    width:100%;
+body img.board {
+    width: 100%;
 }
 
-.sprite {
-    fill:yellow;
-    stroke:#ccc;
-    stroke-width: 3px;
+table#eventTable {
+    width: 100%;
 }
