Integrated visual changes and target modifications to use the new LPC PXT fork.
Signed-off-by: William Temple <William.Temple@colorado.edu>

--- a/theme/style.less
+++ b/theme/style.less
@@ -22,6 +22,18 @@
     margin-left: 1rem;
 }
 
+div.monaco-editor div.margin-view-overlays div {
+    font-family: Monaco, Menlo, "Ubuntu Mono", "Source Code Pro", monospace;
+}
+
+div.monaco-editor div.lines-content div.view-lines div {
+    font-family: Monaco, Menlo, "Ubuntu Mono", "Source Code Pro", monospace;
+}
+
+div.monacoFlyout div.monacoBlock {
+    font-family: Monaco, Menlo, "Ubuntu Mono", "Source Code Pro", monospace;
+}
+
 /* Mobile */
 @media only screen and (max-width: @largestMobileScreen) {
 }
